# cubecobra-cuber

./: .context-for-design-ai  .env.example  .gitignore  AGENTS.md  CLAUDE.md  README.md  pyproject.toml  requirements.txt
.claude/: settings.json
agent_env/: README.md  gate_export.py  install_claude_env.py  install_skills.py
cuber/: __init__.py  __main__.py  cli.py  commander_finder.py  cube.py  cube_manager.py  cube_search.py  cubecobra.py  deck_audit.py  deck_checks.py  deck_counts.py  dossier.py  exporter.py  llm.py  orchestrator.py  scryfall.py  stats.py  tagger.py
docs/: deck-judge-protocol.md  deckbuilding-methodology.md
docs/superpowers/specs/: 2026-07-14-build-deck-revert-design.md
openspec/changes/cube-editor-v1-export-validation/: design.md  proposal.md  tasks.md
openspec/changes/cube-editor-v1-export-validation/specs/add-card-verification/: spec.md
openspec/changes/cube-editor-v2-enricher-overhaul/: design.md  proposal.md  tasks.md
openspec/changes/cubecobra-cuber-toolkit/: design.md  proposal.md  tasks.md
openspec/changes/cubecobra-cuber-v2/: design.md  proposal.md  tasks.md
scripts/: README.md  gate_export.py  install_claude_env.py  install_skills.py  make_judge_bundle.py
skills/: analyze-cube.md  build-deck.md  discover-archetypes.md  set-cube.md  suggest-cube.md  tag-cube.md
skills/build-deck/: SKILL.md
skills/build-deck/references/: build.md  challenger-template.md  discovery.md  orchestrator.md  render-and-save.md  workspace-and-pool.md
tests/: test_deck_checks.py  test_judge_bundle.py  test_ops_repl.py
(+17 files in other folders)
